# Scicomp

./: README.md
gpi/gpu_project/: Cargo.toml
gpi/gpu_project/benches/: matrix_benchmark.rs
gpi/gpu_project/src/: lib.rs  main.rs
russcip/clase/: Cargo.toml
russcip/clase/src/: main.rs
week10/ex10-0499265-Escobedo-Carlos/: Cargo.toml
week11/ex11-0499265-Escobedo-Carlos/: Cargo.toml
week11/ex11-0499265-Escobedo-Carlos/src/: main.rs
week7/Cholesky/src/: main.rs  utils.rs
week7/ex07-0499265-Escobedo-Carlos/: Cargo.toml
week7/ex07-0499265-Escobedo-Carlos/src/: main.rs
week8/ex08-0499265-Escobedo-Carlos/: Cargo.toml
week8/ex08-0499265-Escobedo-Carlos/src/: main.rs
